$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-3 (opened October 4, 2011)

	* nesteddisc: use only max 200 tries to reorder columns: tracing
	showed that in most cases an improved ordering is found rather
	quickly, and trying up to 1000 times takes awfully long. Now
	faster, and usually as good as earlier, but slacker.

	* simulate.rda/cca: implemented 'nsim' or an option to generate an
	array of simulated matrices inheriting from "simmat" object and
	using print.simmat() for a compact display. If 'nsim = 1', similar
	2-dim matrix is returned as before so that cca(simulate(mod))
	still works. For 'nsim > 1', the 'indx' argument should have
	'nsim' rows, but if 'nsim' is missing, number of rows in 'indx'
	will give the number of simulations, and 'indx' can be made with
	permute::shuffleSet().  Implemented for rda() and cca() results,
	but not for capscale() where simulate returns a "dist" object
	which is nasty to pack into an array.

	* oecosimu: An attempt to set 'parallel' processing in evaluating
	the statistic, and only evaluating the statistic -- the simulation
	of null models is not influenced. This uses socket cluster and is
	available in all operating systems. It seems that parallel
	processing is only useful when the evaluation of the statistic is
	slow (tens of seconds). Moreover, it seems that increasing the
	number of parallel processes slows down calculations
	(communication between processes?). Further, socket processing may
	not find function in all packages, but 'vegan' is made known, and
	'stats' and 'base' seem to be known.

	* permutest.cca: implemented 'parallel' processing in
	permutest.cca.  The parallelization only works in R 2.14.0 (alpha)
	and later with the 'parallel' package. Function permutest.cca gets
	a new arguments 'parallel' (defaults 1) that gives the number of
	parallel process, and 'kind' that selects the parallelization
	style which is either "snow" (large overhead, but works in al