@@ -8,7 +8,7 @@
     X <- as.matrix(X)
     NR <- nrow(X) - 1
     Xbar <- scale(X, center = TRUE, scale = scale)
-    SD <- sd(Xbar)
+    SD <- apply(Xbar, 2, sd)
     if (scale) 
         Xbar[is.nan(Xbar)] <- 0
     tot.chi <- sum(svd(Xbar, nu = 0, nv = 0)$d^2)/NR
